# lv_web_emscripten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generated.c  generated.h  lv_conf_8.3.h  lv_conf_9.0.h  lv_drv_conf.h  lvgl-demo-animation-timeline.eez-project  lvgl-demo-flow.eez-project  lvgl-demo-flow.eez-project-ui-state  lvgl-demo-no-flow.eez-project  lvgl-demo.eez-project  lvgl-demo.eez-project-ui-state  lvgl_structs.eez-project  main.c  smart-home-low-res.eez-project  smart-home.eez-project  test_dropdown_roller.eez-project  test_flow.eez-project  var_transfer.eez-project
assets/fonts/: ui_font_Small_Font.fcfg  ui_font_small_font.c
eez-project/: change-screen.eez-project  lvgl-demo-animation-timeline.eez-project  lvgl-demo-flow-v9.0.eez-project  lvgl-demo-flow.eez-project  lvgl-demo-no-flow.eez-project  lvgl_with_eez_flow.eez-project  smart-home.eez-project  test-lvgl-8.3.eez-project  test_lvgl_9.0.eez-project  test_lvgl_flex_layout.eez-project  test_slider.eez-project  watchtest-notworking.eez-project  watchtest.eez-project
eez-project/src/ui/: actions.cpp  actions.h  flow_def.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_font_small_font.c  ui_image_arrow_down.c  ui_image_arrow_up.c  ui_image_btn_main_off.c  ui_image_btn_main_on.c  ui_image_btn_z_botton.c  ui_image_icn_head.c  ui_image_icn_pause.c  ui_image_icn_stop.c  ui_image_icn_time_2.c  ui_image_icn_usb.c  ui_image_icn_wifi.c  vars.h
src/: flow.cpp  flow.h
src/ui/: actions.c  actions.cpp  actions.h  flow.cpp  flow.h  flow_def.c  flow_def.cpp  flow_def.h  fonts.h  images.c  images.h  screens.c  screens.h  structs.h  styles.c  styles.h  ui_font_small_font.c  ui_font_test.c  ui_image_account_box.c  ui_image_arrow_account.c  ui_image_arrow_account_hoover.c  ui_image_arrow_left.c  ui_image_arrow_next.c  ui_image_arrow_next_hover.c  ui_image_arrow_prev.c  ui_image_arrow_prev_hoover.c  ui_image_arrow_right.c  ui_image_big_checkmark.c  ui_image_btn_main_off.c  ui_image_btn_move.c  ui_image_btn_pad_top.c  ui_image_btn_print.c  ui_image_btn_print_down.c  ui_image_btn_print_top_off.c  ui_image_btn_print_top_on.c  ui_image_btn_setting.c  ui_image_btn_z_botton.c  ui_image_btn_z_top.c  ui_image_button_main.c  ui_image_checkmark.c  (+32 more)
ui/: events.h  screens.c  screens.h
